1999-02-08  Tanaka Akira      <akr@jaist.ac.jp>

	* mel-q-ccl.el (mel-ccl-encode-quoted-printable-generic): Fix previous
	change.

1999-02-08  Tanaka Akira      <akr@jaist.ac.jp>

	* mel-q-ccl.el (mel-ccl-encode-quoted-printable-generic): Write white
	space after checking following sequence.

1999-01-20  Tanaka Akira      <akr@jaist.ac.jp>

	* mmgeneric.el (mime-insert-header-from-buffer): Do not contain : in
	`original-field-name'.

1999-01-17  Tanaka Akira      <akr@jaist.ac.jp>

	* ew-compat.el (ew-mime-update-field-decoder-cache): Abolished
	because duplicated.

	* mmgeneric.el (mime-insert-header-from-buffer): Convert LF to CRLF for
	`original-field-body'.

1999-01-05  Tanaka Akira      <akr@jaist.ac.jp>

	* eword-decode.el (mime-decode-header-in-region): Typo fix.

1999-01-04  Tanaka Akira      <akr@jaist.ac.jp>

	* Sync up to flim-1_12_1 from flim-1_11_3.

	* mime-def.el (mime-library-product): Bump up to FLAM-DOODLE
	1.12.0.

1999-01-04  Tanaka Akira      <akr@jaist.ac.jp>

	* ew-var.el (ew-decode-field-syntax-alist): Add `x-face-version',
	`x-pgp-sig-version', `x-pgp-key-info' and `x-info'.

1998-10-27  Tanaka Akira      <akr@jaist.ac.jp>

	* DOODLE-TIPS: Add a workaround for Chao-gnus 6.9.

1998-10-27  Tanaka Akira      <akr@jaist.ac.jp>

	* Sync up to flim-1_11_3 from flim-1_11_2.

	* mime-def.el (mime-library-product): Bump up to FLAM-DOODLE
	1.11.2.

1998-10-26  Tanaka Akira      <akr@jaist.ac.jp>

	* Sync up to flim-1_11_2 from flim-1_11_0.

	* mime-def.el (mime-library-product): Bump up to FLAM-DOODLE
	1.11.1.

1998-10-25  Tanaka Akira      <akr@jaist.ac.jp>

	* eword-decode.el (eword-decode-field-body): Change interface.

1998-10-25  Tanaka Akira      <akr@jaist.ac.jp>

	* eword-decode.el (eword-decode-field): Abolished.
	(eword-decode-field-body): New function.

1998-10-24  Tanaka Akira      <akr@jaist.ac.jp>

	* mel-b-ccl.el: New file.

	* mel-q-ccl.el: New file.

	* mel-ccl.el: Abolished.
